# pytauri-vue-starter

./: README.md  package-lock.json  package.json  pnpm-lock.yaml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src-python/: pyproject.toml
src-tauri/src-python/src/pytauri_vue_starter/: __init__.py  customvideostreamtrack.py  my_task.py
src-tauri/src-python/src/pytauri_vue_starter/frame_controller/: __init__.py  frame_consumer.py  frame_producer.py
src-tauri/src-python/src/pytauri_vue_starter/frame_controller/utils/: shared_memory.py
src-tauri/src-python/src/pytauri_vue_starter/video_controller/: consumer_process.py  consumer_thread.py  consumer_track.py  producer_process.py  producer_thread.py
src-tauri/src-python/tests/: test_video_controller.py
src/components/: console.vue  dialog.vue  image-stream.vue  rtc-stream.vue
